--- a/react-learn/src/App.css
+++ b/react-learn/src/App.css
@@ -2,24 +2,29 @@
     height: 100px;
     position: relative;
 }
+.container{
+    width: 200px;
+    margin: 0 auto;
+}
 .comp-container .title{
     position: absolute;
     left: 0;
     top: 0;
 }
 
+.exit-done{
+    display: none;
+}
 
-.enter-active {
+
+/* .enter-active {
     opacity: 1;
     transition: 2s;
-}
+} */
 
-.container{
-    width: 200px;
-    margin: 0 auto;
-}
 
-.exit-active {
+
+/* .exit-active {
     transition: 1s;
     transform: translateX(-200px);
     opacity: 0;
@@ -37,4 +42,4 @@
     transition: 1s;
     opacity: 1;
     transform: translateX(0);
-}
+} */
