--- a/react-learn/src/App.css
+++ b/react-learn/src/App.css
@@ -1,7 +1,32 @@
-.main{
-    width: 800px;
+.page{
+    width: 600px;
+    border: 2px solid;
     margin: 0 auto;
 }
-.page-container{
-    position: relative;
+.page1{
+    background: lightskyblue;
+}
+.page2{
+    background: lightslategrey;
+}
+
+.nav {
+    position: fixed;
+    left: 0;
+    top:50%;
+    transform: translateY(-50%);
+    background: #008c8c;
+    color: #fff;
+    padding:20px
+}
+.nav a {
+    color: inherit;
+    display: block;
+    margin: 20px 0;
+    text-decoration: none;
+    font-size: 2em;
+}
+
+.nav a.active{
+    color: yellow;
 }
