--- a/react-learn/src/App.css
+++ b/react-learn/src/App.css
@@ -1,32 +1,18 @@
-.page{
-    width: 600px;
-    border: 2px solid;
-    margin: 0 auto;
-}
-.page1{
-    background: lightskyblue;
-}
-.page2{
-    background: lightslategrey;
-}
-
-.nav {
-    position: fixed;
-    left: 0;
-    top:50%;
-    transform: translateY(-50%);
-    background: #008c8c;
-    color: #fff;
-    padding:20px
-}
 .nav a {
-    color: inherit;
-    display: block;
-    margin: 20px 0;
+    color: #000;
     text-decoration: none;
     font-size: 2em;
+    margin: 30px;
+}
+.nav a.active {
+    color: red;
+}
+.container {
+    margin:30px;
 }
 
-.nav a.active{
-    color: yellow;
+.container textarea{
+    width: 500px;
+    height: 200px;
+    font-size: 2em;
 }
